# LibraryProject

./: .dockerignore  .env  .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  dump.rdb  library_fixture.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
nginx/: nginx.conf
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html
